@@ -1,14 +1,13 @@
 package AFN;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
-public class SimbESP {
+public final class SimbESP {
     public static char Epsilon = (char)5;
     public static char Fin = (char)0;
     public static int Error = 20000;
-    public static int Omitir = 20001; // Omitir Saltos, Espacios y tabulaciones
-    public static Set<Character> SimbolosOmitir = new HashSet<>(Arrays.asList(' ', '\n' , '\t'));
-    public static Set<String> SimbolosEpsilon = new HashSet<>(Set.of("epsilon","ϵ"));
+    public static int Omitir = 20001; // Omitir Saltos de linea, Espacios y tabulaciones
+    public static List<Character> SimbolosOmitir = List.of(' ', '\n' , '\t');
+    public static Set<String> SimbolosEpsilon = Set.of("epsilon","ϵ");
 }
